--- a/src/components/Landing_Page/PokemonResults.css
+++ b/src/components/Landing_Page/PokemonResults.css
@@ -10,7 +10,7 @@
       flex-direction: row;
     }
 
-    .pokemon_card_container {
+    .pokemon_card_container {`
       display: flex;
       flex-direction: column;
       align-items: center;
