--- a/src/components/Landing_Page/PokemonResults.css
+++ b/src/components/Landing_Page/PokemonResults.css
@@ -1,25 +1,36 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap');
+
 @media screen 
   and (min-device-width: 1200px) 
   and (max-device-width: 1600px) 
   and (-webkit-min-device-pixel-ratio: 1) { 
 
     .list {
+      height: 90vh;
+      overflow: scroll;
       list-style: none;
       display: flex;
       flex-wrap: wrap;
       flex-direction: row;
+      width: 75vw;
+      border: 2px solid rgb(233, 236, 239);
+      border-radius: 10px;
+      justify-content: center;
+      padding-left: 0;
+      padding-top: 20px;
+      padding-bottom: 20px;
     }
 
-    .pokemon_card_container {`
+    .pokemon_card_container {
       display: flex;
       flex-direction: column;
       align-items: center;
       width: 10vw;
       height: 20vh;
-      background-color: 
       border-radius: 10px;
       margin: 10px;
       padding: 10px;
+      background: rgb(233, 236, 239, .5);
     }
 
     .pokemon_image{
@@ -28,4 +39,8 @@
       object-fit: contain;
     }
 
+    .pokemon_name {
+      font-family: 'Montserrat', sans-serif;
+      text-decoration: none;
+    }
 }
